# Kuznyechik_Implementation

./: .gitignore  CMakeLists.txt  Kuznechik.c  Kuznechik.h  MGM.c  README.md  funcs.asm
kuznyechik/: gost12_15.h
